# parking-rendering-Architecture-

./: CMakeLists.txt  README.md  录屏 2024年01月22日 22时51分14秒.webm
Appbox/: CMakeLists.txt
Appbox/src/: App.cpp  App2D.cpp  App2D.h  ExampleLayer.cpp  ExampleLayer.h
OmniviewXEngine/: CMakeLists.txt
OmniviewXEngine/src/: OmniviewXEngine.cpp  OmniviewXEngine.h  Omniviewpch.cpp  Omniviewpch.h
OmniviewXEngine/src/OmniviewXEngine/Core/: Application.cpp  Application.h  Assert.h  Base.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  PlatformDetection.h  Timer.cpp  Timer.h  Timestep.cpp  Timestep.h  UUID.cpp  UUID.h  Windows.cpp  Windows.h
OmniviewXEngine/src/OmniviewXEngine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
OmniviewXEngine/src/OmniviewXEngine/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
OmniviewXEngine/src/OmniviewXEngine/Math/: Math.cpp  Math.h
OmniviewXEngine/src/OmniviewXEngine/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  MSDFData.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  RenderCommandQueue.cpp  RenderCommandQueue.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
OmniviewXEngine/src/OmniviewXEngine/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
OmniviewXEngine/src/OmniviewXEngine/Utils/: PlatformUtils.h
OmniviewXEngine/src/Platform/Linux/: LinuxWindow.cpp  LinuxWindow.h  LinuxWindowsPlatformUtils.cpp  WindowsInput.cpp
OmniviewXEngine/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRenderPass.cpp  OpenGLRenderPass.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
OmniviewXEngineInput/: CMakeLists.txt  imgui.ini
OmniviewXEngineInput/src/: EditorLayer.cpp  EditorLayer.h  OmniviewInputApp.cpp
OmniviewXEngineInput/src/Panels/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
